deps/v8/test/message/fail/class-private-field-reinitialization.out
*%(basename)s:7: TypeError: Cannot initialize #x twice on the same object
class B extends A { #x; }
                    ^
TypeError: Cannot initialize #x twice on the same object
    at <instance_members_initializer> (*%(basename)s:7:21)
    at new B (*%(basename)s:7:1)
    at *%(basename)s:10:1
